--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8">
   <script language="javascript" type="text/javascript" src="https://github.com/MiniBraga/BabyShark/blob/master/BabyShark.js"></script> 
-  <script language="javascript" type="text/javascript" src="BabyShark.js"></script>
+  <script language="javascript" type="text/javascript" src="sketch.js"></script>
 
   <style> body {padding: 0; margin: 0;} </style>
 </head>
