--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <script language="javascript" type="text/javascript" src="https://github.com/MiniBraga/BabyShark/blob/master/BabyShark.js"></script> 
+  <script language="javascript" type="text/javascript" src="https://github.com/MiniBraga/BabyShark/blob/master"></script> 
   <script language="javascript" type="text/javascript" src="sketch.js"></script>
 
   <style> body {padding: 0; margin: 0;} </style>
